Add "Last Instruction" printout to web interface

--- a/html5/index.html
+++ b/html5/index.html
@@ -45,6 +45,9 @@
   <td id="RegO" class="reg"></td>
 </tr>
 </table>
-  <button id='btnStep'>Step</button>
+<button id='btnStep'>Step</button>
+<div>
+  <h3>Last Instruction</h3>
+  <div id="lastInstr"></div>
 </body>
 </html>
