Add basic error reporting.
Assebler.assemble now returns an object containing error information.
Add an error message output in webview to notifiy the user where
errors occur.

--- a/html5/index.html
+++ b/html5/index.html
@@ -135,7 +135,9 @@
     SET PC,POP
 :crash
     SET PC,crash
-</textarea></form>
+</textarea>
+<p id="asm-error"></p>
+</form>
     </div>
 </div>
 
