Add error messages on 'Value' parsing.
More error messages are generated. Not very high granularity
currently... if none of the regexs match a value string then
the assembler will dump out the value it was unable to match.

--- a/html5/index.html
+++ b/html5/index.html
@@ -87,7 +87,8 @@
       </tr>
       </tbody>
       </table>
-      <table class="table-compact mono">
+      <!--<table class="table-compact mono">-->
+      <table class="table mono">
       <thead>
       <tr>
         <th colspan="2">Memory Dump</th>
