Fix some register operations.
Indirect register values now work.

--- a/html5/index.html
+++ b/html5/index.html
@@ -16,7 +16,7 @@
     body {
       padding-top: 60px;
     }
-    .current-instruction {
+    .myclass {
       background-color: green
     }
   </style>
