--- a/html5/index.html
+++ b/html5/index.html
@@ -137,9 +137,10 @@
 :crash
     SET PC,crash
 </textarea>
-<p id="asm-error"></p>
-</form>
+      <p id="asm-error"></p>
+      </form>
     </div>
+    <canvas id="framebuffer" ></canvas>
 </div>
 
 <script>
