Fix assembler bugs.
Better handling of [reg+imm] values, now reg and imm can be swapped,
and imm may be a label.

--- a/html5/index.html
+++ b/html5/index.html
@@ -46,6 +46,7 @@
 
 <div class="container">
     <div class="span6">
+      Cycles: <span id="cycles"></span>
       <table class="table-compact">
       <thead>
       <tr>
