Add reset functionality.
Reset will zero ram, reset registers (0 for most, and 0xffff for
SP). Devices have a "reset()" function that will get called for all
attached devices. Reset will also unmap all devices.

--- a/html5/index.html
+++ b/html5/index.html
@@ -116,6 +116,7 @@
     <button id='btnRun' class='btn'>Run</button>
     <button id='btnStop' class='btn'>Stop</button>
     <button id='btnAssemble' class='btn'>Assemble</button>
+    <button id='btnReset' class='btn'>Reset</button>
     </div>
     <div class="span5">
 <form><textarea id="code" class="code">
