--- a/html5/index.html
+++ b/html5/index.html
@@ -4,6 +4,7 @@
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href='codemirror2/lib/codemirror.css' rel='stylesheet'>
   <link href='codemirror2/doc/docs.css' rel='stylesheet'>
+  <script src="js/jquery.js"></script>
   <script src="../js/web/application.js"></script>
   <script src="codemirror2/lib/codemirror.js"></script>
   <script src="codemirror2/mode/clike/clike.js"></script>
