--- a/html5/index.html
+++ b/html5/index.html
@@ -1,125 +1,79 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <link href='codemirror2/lib/codemirror.css' rel='stylesheet'>
-  <link href='codemirror2/doc/docs.css' rel='stylesheet'>
-  <script src="js/jquery.js"></script>
-  <script src="../js/web/application.js"></script>
-  <script src="codemirror2/lib/codemirror.js"></script>
-  <script src="codemirror2/mode/clike/clike.js"></script>
-  <script src="codemirror2/keymap/vim.js"></script>
-  <style>
-    .mono{
-      font-family: 'Courier', sans-serif;
-    }
-    body {
-      padding-top: 60px;
-    }
-    .myclass {
-      background-color: green
-    }
-  </style>
+<meta charset="utf-8">
+<title>DCPU</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
+
+<link href="css/bootstrap.css" rel="stylesheet">
+<link href='codemirror2/lib/codemirror.css' rel='stylesheet'>
+
+<style type="text/css">
+body {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+.sidebar-nav {
+  padding: 9px 0;
+}
+.CodeMirror-scroll {
+      height: 400;
+      overflow: auto;
+}
+</style>
+<link href="css/bootstrap-responsive.css" rel="stylesheet">
+
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
 
 <body>
 
-  <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="#">DCPU-16 v1.7 Simulator</a>
-        <div class="nav-collapse">
-          <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </div>
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container-fluid">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="#">DCPU 1.7 Emulator</a>
+      <div class="nav-collapse">
+        <ul class="nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
     </div>
   </div>
+</div>
 
-<div class="container">
-    <div class="span6">
-      Cycles: <span id="cycles"></span>
-      <table class="table-compact">
-      <thead>
-      <tr>
-        <th colspan="4">Registers</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td>A: </td>
-        <td id="RegA" class="reg mono"></td>
-        <td>B: </td>
-        <td id="RegB" class="reg mono"></td>
-        <td>C: </td>
-        <td id="RegC" class="reg mono"></td>
-      </tr>
-      <tr>
-        <td>X: </td>
-        <td id="RegX" class="reg mono"></td>
-        <td>Y: </td>
-        <td id="RegY" class="reg mono"></td>
-        <td>Z: </td>
-        <td id="RegZ" class="reg mono"></td>
-      </tr>
-      <tr>
-        <td>I: </td>
-        <td id="RegI" class="reg mono"></td>
-        <td>J: </td>
-        <td id="RegJ" class="reg mono"></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>PC: </td>
-        <td id="RegPC" class="reg mono"></td>
-        <td>SP: </td>
-        <td id="RegSP" class="reg mono"></td>
-        <td>O: </td>
-        <td id="RegEX" class="reg mono"></td>
-      </tr>
-      </tbody>
-      </table>
-      <!--<table class="table-compact mono">-->
-      <table class="table mono">
-      <thead>
-      <tr>
-        <th colspan="2">Memory Dump</th>
-        <th></th>
-        <th>Base:</th>
-        <th colspan="5"><input id="membase" type="text" value="0x0"/>
-      <tr>
-      <tr>
-        <th>Addr</th>
-        <th>0000</th>
-        <th>0001</th>
-        <th>0002</th>
-        <th>0003</th>
-        <th>0004</th>
-        <th>0005</th>
-        <th>0006</th>
-        <th>0007</th>
-      </tr>
-      </thead>
-      <tbody id="memdump-body">
-      </tbody>
-      </table>
-    <button id='btnStep' class="btn">Step</button>
-    <button id='btnRun' class='btn'>Run</button>
-    <button id='btnStop' class='btn'>Stop</button>
-    <button id='btnAssemble' class='btn'>Assemble</button>
-    <button id='btnReset' class='btn'>Reset</button>
-    </div>
-    <div class="span5">
-<form><textarea id="code" class="code">
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span2">
+      <div class="well sidebar-nav">
+        <ul class="nav nav-list">
+          <li class="nav-header">Unused</li>
+          <li class="active"><a href="#code" data-toggle="tab">Code</a></li>
+          <li><a href="#" data-toggle="tab">Configure</a></li>
+        </ul>
+      </div><!--/.well -->
+    </div><!--/span-->
+    <div class="span10">
+      <div class="tab-content">
+        <div id="code" class="tab-pane active">
+          <div class="row-fluid">
+            <div class="span7">
+              <ul id="editTab" class="nav nav-tabs">
+                <li><a href="#"><i class="icon-file"></i></a></li>
+                <li class="active"><a href="#" data-toggle="tab">entry.s</a></li>
+              </ul>
+              <textarea id="codemirror">
 :start  ; Map framebuffer RAM
         set a, 0
         set b, 0x1000
@@ -149,23 +103,163 @@
         
 :ohhey  dat "Generic-Clock Test"
         dat 0x0
-</textarea>
-      <p id="asm-error"></p>
-      </form>
-    </div>
-    <canvas id="framebuffer" width="512" height="384"></canvas>
-</div>
+            </textarea>
+            </div><!--span-->
+            <div class="span5">
+              <br>
+              <br>
+              <canvas id="framebuffer" width="384" height="288"></canvas>
+              <br>
+              <span>
+                <button id="btnRun" class="btn">Run</button>
+                <button id="btnStep" class="btn">Step</button>
+                <button id="btnReset" class="btn">Reset</button>
+                <span class="pull-right">
+                  Cycles: <span id="cycles">0</span>
+                </span>
+              </span>
+            </div><!--span-->
+          </div>
+          <div class="row-fluid">
+            <div class="span4">
+              <table class="table-compact">
+              <thead>
+                <tr>
+                  <th colspan="4">Registers</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>A: </td>
+                  <td id="RegA" class="reg mono">0x0000</td>
+                  <td>B: </td>
+                  <td id="RegB" class="reg mono">0x0000</td>
+                  <td>C: </td>
+                  <td id="RegC" class="reg mono">0x0000</td>
+                </tr>
+                <tr>
+                  <td>X: </td>
+                  <td id="RegX" class="reg mono">0x0000</td>
+                  <td>Y: </td>
+                  <td id="RegY" class="reg mono">0x0000</td>
+                  <td>Z: </td>
+                  <td id="RegZ" class="reg mono">0x0000</td>
+                </tr>
+                <tr>
+                  <td>I: </td>
+                  <td id="RegI" class="reg mono">0x0000</td>
+                  <td>J: </td>
+                  <td id="RegJ" class="reg mono">0x0000</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>PC: </td>
+                  <td id="RegPC" class="reg mono">0x0000</td>
+                  <td>SP: </td>
+                  <td id="RegSP" class="reg mono">0xffff</td>
+                  <td>EX: </td>
+                  <td id="RegEX" class="reg mono">0x0000</td>
+                </tr>
+              </tbody>
+              </table>
+            </div>
+          </div>
+        </div><!--/tab-pane-->
+        <div id="run" class="tab-pane">
+        </div>
+        <div id="configure" class="tab-pane">
+          <div class="hero-unit">
+            <h1>Hello, world!</h1>
+            <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+            <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+          </div>
+          <div class="row-fluid">
+            <div class="span4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn" href="#">View details &raquo;</a></p>
+            </div><!--/span-->
+            <div class="span4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn" href="#">View details &raquo;</a></p>
+            </div><!--/span-->
+            <div class="span4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn" href="#">View details &raquo;</a></p>
+            </div><!--/span-->
+          </div><!--/row-->
+          <div class="row-fluid">
+            <div class="span4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn" href="#">View details &raquo;</a></p>
+            </div><!--/span-->
+            <div class="span4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn" href="#">View details &raquo;</a></p>
+            </div><!--/span-->
+            <div class="span4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn" href="#">View details &raquo;</a></p>
+            </div><!--/span-->
+          </div><!--/row-->
+        </div><!--/span9-->
+      </div>
+      </div>
+    </div><!--/tab-container-->
+  </div><!--/row-->
+  <hr>
+  <!--
+  <footer>
+    <p>&copy; Company 2012</p>
+  </footer>
+  -->
+</div><!--/.fluid-container-->
+
+<!-- Le javascript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap-transition.js"></script>
+<script src="js/bootstrap-alert.js"></script>
+<script src="js/bootstrap-modal.js"></script>
+<script src="js/bootstrap-dropdown.js"></script>
+<script src="js/bootstrap-scrollspy.js"></script>
+<script src="js/bootstrap-tab.js"></script>
+<script src="js/bootstrap-tooltip.js"></script>
+<script src="js/bootstrap-popover.js"></script>
+<script src="js/bootstrap-button.js"></script>
+<script src="js/bootstrap-collapse.js"></script>
+<script src="js/bootstrap-carousel.js"></script>
+<script src="js/bootstrap-typeahead.js"></script>
+<script src="codemirror2/lib/codemirror.js"></script>
+<script src="codemirror2/mode/clike/clike.js"></script>
+<script src="codemirror2/keymap/vim.js"></script>
 
 <script>
-  CodeMirror.commands.save = function() { alert("Saving"); };
+$(function() {
+  $('#editTab a').click(function (e) {
+    e.preventDefault();
+    $(this).tab('show');
+  });
 
-  window.editor = CodeMirror.fromTextArea(document.getElementById("code"), {
+  CodeMirror.commands.save = function() { alert("Saving"); };
+  window.editor = CodeMirror.fromTextArea(document.getElementById("codemirror"), {
     lineNumbers: true,
     mode: "text/x-csrc",
     keyMap: "vim",
+    height: "100%",
   });
-
+});
 
 </script>
+<script src="../js/web/application.js"></script>
+
 </body>
 </html>
+
