--- a/html5/index.html
+++ b/html5/index.html
@@ -88,6 +88,7 @@
                 <button id="btnRun" class="btn"><i class="icon-play"></i>Run</button>
                 <button id="btnStep" class="btn"><i class="icon-step-forward"></i>Step</button>
                 <button id="btnReset" class="btn"><i class="icon-refresh"></i>Reset</button>
+                <button id="btnAssemble" class="btn">Assemble</button>
                 <span class="pull-right">
                   Cycles: <span id="cycles">0</span>
                 </span>
