Look for application.js in html5/js
Now a webserver can just point to the html5/ directory for easier
deployment

--- a/html5/index.html
+++ b/html5/index.html
@@ -223,7 +223,7 @@ $(function() {
 });
 
 </script>
-<script src="../js/web/application.js"></script>
+<script src="js/application.js"></script>
 
   <div class="modal" id="newFile">
     <div class="modal-header">
