Add source-line mappings

--- a/html5/index.html
+++ b/html5/index.html
@@ -29,6 +29,9 @@
   .mono {
     font-family: 'Courier', sans-serif;                                                                                                                             
   }
+
+  .activeline {
+    background: #e8f2ff !important;
 </style>
 <link href="css/bootstrap-responsive.css" rel="stylesheet">
 
