--- a/html5/codemirror2/mode/dasm/index.html
+++ b/html5/codemirror2/mode/dasm/index.html
@@ -4,7 +4,7 @@
     <title>CodeMirror: DCPU Assembly mode</title>
     <link rel="stylesheet" href="../../lib/codemirror.css">
     <script src="../../lib/codemirror.js"></script>
-    <script src="clike.js"></script>
+    <script src="dasm.js"></script>
     <link rel="stylesheet" href="../../doc/docs.css">
     <style>.CodeMirror {border: 2px inset #dee;}</style>
   </head>
