Add openFile bar

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         <div id="emulator" class="tab-pane active">
           <div class="row-fluid">
             <div class="span5">
+              <ul id="openFiles" class="nav nav-tabs">
+              </ul>
               <div id="openFileContents" class="tab-content">
               </div><!--tab-contents-->
             </div><!--span-->
