Remove unused buttons and branding

--- a/index.html
+++ b/index.html
@@ -50,13 +50,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">hcf.io alpha</a>
+      <a class="brand" href="#">hcf beta</a>
       <div class="nav-collapse">
         <ul class="nav">
           <li class="active"><a href="#emulator" data-toggle="tab">Emulator</a></li>
-          <li><a href="#disassembler" data-toggle="tab">Disassembler</a></li>
-          <li><a href="#font-editor" data-toggle="tab">Font Editor</a></li>
-          <li><a href="#about" data-toggle="tab">About</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
