--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 <link href="stylesheets/bootstrap.css" rel="stylesheet">
 <link href='codemirror2/lib/codemirror.css' rel='stylesheet'>
 
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-32568392-1']);
+  _gaq.push(['_trackPageview']);
+  
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();
+</script>
+
 <style type="text/css">
   body {
     padding-top: 60px;
